--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "hooks-snake-game",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://osho210.github.io/hooks-snake-game",
+  "homepage": "https://osho210.github.io/snakegame",
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.2.0",
     "@fortawesome/free-solid-svg-icons": "^6.2.0",
